--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /*******************************/
 /********* General CSS *********/
 /*******************************/
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
+
 body {
     color: #757575;
     background: #ffffff;
