--- a/css/shop.css
+++ b/css/shop.css
@@ -49,6 +49,21 @@ button {
     background-color: white;
 }
 
+.product-container-check{
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: white;
+}
+
+.product-container-check:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .product-container:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
@@ -91,7 +106,7 @@ button {
 }
 
 ::before {
-    color: greenyellow;
+    color: #fbaf32;
 }
 
 .list {
