--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,60 @@ h2 {
     margin-bottom: 70px;
 }
 
+div#products {
+    display: flex;
+}
+
+span.span-title {
+    display: flex;
+    border-radius: 5px;
+    margin-right: 5px;
+    background-color: wheat;
+    padding: 2px;
+}
+
+.input-group-text {
+    width: 40px;
+}
+
+span.span-title #delete {
+    margin-left: 5px;
+    color: #fbaf32;
+}
+
+i#delete {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+i[class^="fi-rr-"]:before, i[class*=" fi-rr-"]:before, span[class^="fi-rr-"]:before, span[class*="fi-rr-"]:before {
+    color: red;
+    font-family: uicons-regular-rounded !important;
+    font-style: normal;
+    font-weight: normal !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+i[class^="fi-br-"]:before, i[class*=" fi-br-"]:before, span[class^="fi-br-"]:before, span[class*="fi-br-"]:before {
+    color: #fbaf32;
+    font-family: uicons-bold-rounded !important;
+    font-style: normal;
+    font-weight: normal !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.btn-i {
+    width: 15px;
+    height: 15px;
+}
 
 a {
     font-family: 'Nunito', sans-serif;
@@ -59,6 +113,11 @@ a:focus {
     border: 2px solid #fbaf32;
     border-radius: 5px;
     transition: .5s;
+}
+
+#btnCheck {
+    margin-top: 12px;
+    width: 100%;
 }
 
 .btn.custom-btn:hover {
