--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ i[class^="fi-rr-"]:before, i[class*=" fi-rr-"]:before, span[class^="fi-rr-"]:bef
 }
 
 i[class^="fi-rs-"]:before, i[class*=" fi-rs-"]:before, span[class^="fi-rs-"]:before, span[class*="fi-rs-"]:before {
+    position: absolute;
     color: #fbaf32;
     font-family: uicons-regular-straight !important;
     font-style: normal;
