--- a/css/shop.css
+++ b/css/shop.css
@@ -108,9 +108,9 @@ button {
 .button-dele {
     margin-right: 5px;
     background-color: white;
-    color: red;
+    color: #a23530;
     font-size: 10px;
-    border: 2px solid red; /* Green */
+    border: 2px solid #a23530; /* Green */
     transition-duration: 0.4s;
     position: absolute;
     right: 15px;
@@ -118,7 +118,7 @@ button {
 }
   
 .button-dele:hover {
-    background-color: red; /* Green */
+    background-color: #a23530; /* Green */
     color: white;
 }
 
