--- a/css/shop.css
+++ b/css/shop.css
@@ -288,9 +288,10 @@ i.fi.fi-rr-interrogation.inte-info {
 }
 
 .container-info {
+    margin-left: -50px;
     margin-top: -100px;
     height: 100px;
-    width: 350px;
+    width: 300px;
     backdrop-filter: blur(20px);
     border-radius: 12px;
 }
@@ -298,4 +299,5 @@ i.fi.fi-rr-interrogation.inte-info {
 .fa-times:before {
     color: black;
     content: "\f00d";
+    font-size: 12px;
 }
