--- a/css/shop.css
+++ b/css/shop.css
@@ -122,6 +122,23 @@ button {
     color: white;
 }
 
+.button-delete {
+    margin-right: 5px;
+    background-color: white;
+    color: #a23530;
+    font-size: 10px;
+    border: 2px solid #a23530; /* Green */
+    transition-duration: 0.4s;
+    position: absolute;
+    right: 15px;
+    bottom: 10px;
+}
+  
+.button-delete:hover {
+    background-color: #a23530; /* Green */
+    color: white;
+}
+
 ::before {
     color: white;
 }
@@ -279,7 +296,7 @@ i.fi.fi-rr-interrogation.inte-info {
 .container-info {
     width: 1250%;
     margin-top: -100px;
-    background: linear-gradient(to right, #f12711, #f5af19, 0.9);
+    background: linear-gradient(to right, #f12711, #f5af19, 0.3);
 }
 
 .paragraph-info {
