--- a/css/style.css
+++ b/css/style.css
@@ -1630,6 +1630,54 @@ picture img {
     transition: .5s;
 }
 
+h2.h2 {
+    font-size: 2rem;
+    position: absolute;
+    margin-top: -18px;
+}
+
+h2.h2.main {
+    color: white;
+    text-shadow: 
+    -2px -1px 0 #fbaf32,
+    1px -1px 0 #fbaf32,
+    1px 1px 0 #fbaf32,
+    -1px 1px 0 #fbaf32;
+}
+
+h2.h2.wave {
+    color: #09f;
+    animation: wave 3s ease-in-out infinite;
+}
+
+@keyframes wave {
+    0%, 100% {
+        clip-path: polygon(
+            0% 47%,
+            10% 48%,
+            33% 54%,
+            54% 60%,
+            70% 61%,
+            84% 59%,
+            100% 100%,
+            0% 100%
+        );
+    }
+
+    50% {
+        clip-path: polygon(
+            0% 47%,
+            15% 65%,
+            34% 66%,
+            51% 62%,
+            84% 45%,
+            100% 46%,
+            100% 100%,
+            0% 100%
+        );
+    }
+}
+
 #btn-ite:hover {
     color: #fbaf32;
     background: transparent;
