--- a/css/shop.css
+++ b/css/shop.css
@@ -106,20 +106,20 @@ button {
     color: white;
 }
 
-.button-dele {
+.button-remove {
+    width: 100px;
     margin-right: 5px;
     background-color: white;
-    color: #a23530;
-    font-size: 10px;
-    border: 2px solid #a23530; /* Green */
+    color: black;
+    border: 2px solid red; /* Red */
     transition-duration: 0.4s;
     position: absolute;
     right: 15px;
     bottom: 10px;
 }
   
-.button-dele:hover {
-    background-color: #a23530; /* Green */
+.button-remove:hover {
+    background-color: red; /* Red */
     color: white;
 }
 
