--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,16 @@ hr {
     padding-left: 30px;
 }
 
+#rooms {
+    width: 200px;
+    height: 50px;
+    border-radius: 12px;
+    border: 0;
+    outline: none;
+    border-color: none;
+    padding-left: 30px;
+}
+
 div#sdk {
     margin-top: 50px;
 }
