--- a/css/style.css
+++ b/css/style.css
@@ -1442,6 +1442,19 @@ div#sdk h2 {
     background-size: cover;
 }
 
+.page-aviario {
+    position: relative;
+    margin-bottom: 45px;
+    padding: 150px 0 90px 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/aviario-nacional-de-colombia-2023.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #page_pay {
     position: relative;
     margin-bottom: 45px;
