--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html{
 body {
     color: #757575;
     background: #ffffff;
-    font-family: 'open sans', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h1,
@@ -1450,6 +1450,32 @@ div#sdk h2 {
     justify-content: center;
     align-items: center;
     background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/aviario-nacional-de-colombia-2023.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.page-buceo {
+    position: relative;
+    margin-bottom: 45px;
+    padding: 150px 0 90px 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/baru-buceo-y-snorckel.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.page-excursion {
+    position: relative;
+    margin-bottom: 45px;
+    padding: 150px 0 90px 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/excursion-barco-privado-2023.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
