--- a/css/shop.css
+++ b/css/shop.css
@@ -89,7 +89,7 @@ button {
 }
 
 
-.button-add {
+.product-container .button-add {
     width: 100px;
     margin-right: 5px;
     background-color: white;
